# ianua-library

./: .gitignore  CHANGELOG.md  README.md  commit_msg.txt  mkdocs.yml  pyproject.toml
.claude/: settings.json
.cursor/plans/: refactoring_ai_module_dbc8c583.plan.md
.cursor/rules/: api-openapi-views.mdc  api-openapi.mdc  ci-pipeline.mdc  git-conventions.mdc  mkdocs-documentation.mdc  project-conventions.mdc  pytest-standards.mdc  python-style.mdc  rails-patterns.mdc  rspec-standards.mdc  security-standards.mdc  slim-templates.mdc
docs/: agent-rules-commands-skills.md  api-reference.md  application-integration-flow.md  architecture.md  audio-diarization.md  audio-emotion.md  chatbot.md  documentation-workflow.md  extending.md  getting-started.md  index.md  llm-generation-params.md  preconfigurations.md
scripts/: run_diarization.py
src/ianuacare/: __init__.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py  test_vector_pipeline_e2e.py
tests/unit/: test_ai.py  test_ai_edge_cases.py  test_audio_emotion.py  test_audio_pipeline.py  test_bucket_pipeline.py  test_campp_embedder.py  test_chatbot_payload.py  test_cognito_login.py  test_emotion_clusterer.py  test_input_parser.py  test_label_clusterer.py  test_llm_build_prompt.py  test_llm_params.py  test_merge_short_chunks.py  test_orchestrator.py  test_orchestrator_cache.py  test_output_parser.py  test_parser.py  test_pipeline.py  test_pipeline_deprecation.py  test_pipeline_vector.py  test_postgres.py  test_presets.py  test_qdrant.py  test_ranked_label_clusterer.py  test_reader.py  test_rest_hosted_provider.py  test_s3.py  test_segment_duration.py  test_speaker_clusterer.py  test_speaker_embedder.py  test_spectral_segmenter.py  test_storage_clients.py  test_storage_parsers.py  test_text_chunker.py  test_text_embedder.py  test_text_utils.py  (+5 more)
(+86 files in other folders)
